# spring_alogorithms

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ai-cli.yaml  tests.yaml
additional_tasks/: CMakeLists.txt
cmake/: AddHomeworkTask.cmake
doc/: README.md
doc/topic0/: question1.md  question2.md  question3.md  question4.md
doc/topic1/: question1.md  question10.md  question11.md  question12.md  question13.md  question2.md  question3.md  question4.md  question5.md  question6.md  question7.md  question8.md  question9.md
doc/topic2/: question1.md  question10.md  question11.md  question12.md  question2.md  question3.md  question4.md  question5.md  question6.md  question7.md  question8.md  question9.md
doc/topic3/: question1.md  question10.md  question11.md  question12.md  question13.md  question14.md  question15.md  question16.md  question17.md  question18.md  question19.md  question2.md  question3.md  question4.md  question5.md  question6.md  question7.md  question8.md  question9.md
doc/topic4/: question1.md  question2.md  question3.md  question4.md  question5.md  question6.md  question7.md  question8.md  question9.md
doc/topic5/: question1.md  question10.md  question11.md  question2.md  question3.md  question4.md  question5.md  question6.md  question7.md  question8.md  question9.md
lib/: CMakeLists.txt
sandbox/: CMakeLists.txt
task_01/: CMakeLists.txt  first  first.cpp  pragma  test.cpp
task_01/src/: find_numbers.cpp  find_numbers.hpp  get_terms.hpp  main  main.cpp  solution.cpp  solution.hpp  task_01.cpp  task_01.h  task_01.hpp  test.cpp  util.hpp
task_01/task1/: tests.cpp  two_sum.cpp  two_sum.hpp
task_02/: CMakeLists.txt  README.md
task_02/src/: find_zero_one_pair.cpp  find_zero_one_pair.h  get_border_index.hpp  main.cpp  stack.cpp  stack.hpp  test.cpp
task_02/task2/: stack.cpp  stack.hpp  tests.cpp
task_03/: CMakeLists.txt
task_03/src/: days_untill_warmer.cpp  days_untill_warmer.hpp  find_days_to_warm.cpp  get_combinations.hpp  main.cpp  phone_combinations.cpp  phone_combinations.h  solution.cpp  solution.hpp  test.cpp  util.hpp
task_03/task3/: solution.cpp  solution.hpp  tests.cpp
task_04/: CMakeLists.txt
task_04/src/: conditions.txt  main.cpp  queue.cpp  queue.hpp  solution.cpp  solution.hpp  stack.cpp  stack.hpp  task4.cpp  task4.hpp  test.cpp  util.hpp
task_04/task4/: fish.cpp  fish.hpp  tests.cpp
task_05/: CMakeLists.txt
task_05/src/: QuickSort.cpp  QuickSort.hpp  heap.hpp  main.cpp  sorting.cpp  sorting.hpp  temperature_rise.hpp  test.cpp  topology_sort.cpp  topology_sort.hpp
task_05/task5/: sort.cpp  sort.hpp  tests.cpp
task_06/: CMakeLists.txt
task_06/src/: fish_cost.cpp  fish_cost.h  get_min_cost.hpp  k-stat.cpp  k-stat.hpp  main.cpp  ord_stat.cpp  test.cpp
task_06/task6/: order_statistic.cpp  order_statistic.hpp  tests.cpp
task_07/: CMakeLists.txt
task_07/header/: mergeSort.h
task_07/heared/: mergeSort.h
task_07/src/: AVLTree.hpp  MergeSort.hpp  main.cpp  mergeSort.cpp  (+4 more)
task_08/: CMakeLists.txt
task_09/: CMakeLists.txt
task_10/: CMakeLists.txt
task_11/: CMakeLists.txt
task_12/: CMakeLists.txt
task_13/: CMakeLists.txt
task_14/: CMakeLists.txt
(+47 files in other folders)
